--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
@@ -34,6 +35,7 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "react-bootstrap": "^0.31.3",
     "react-router-dom": "^4.1.2"
   }
 }
