--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
