--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "seed": "node scripts/seeds",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+ "engines": {
+    "node": "6.11.2",
+    "npm": "3.10.10",
+    "yarn": "1.1.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davesrose/MS_support.git"
