--- a/package.json
+++ b/package.json
@@ -12,11 +12,6 @@
     "seed": "node scripts/seeds",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
- "engines": {
-    "node": "6.11.2",
-    "npm": "3.10.10",
-    "yarn": "1.1.0"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/davesrose/MS_support.git"
@@ -29,14 +24,14 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
-    "multer": "^1.3.0",
+
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
