--- a/package.json
+++ b/package.json
@@ -26,16 +26,19 @@
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
-
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
-    "react-router-dom": "^4.1.2"
+    "react-fetch": "^0.0.9",
+    "react-router-dom": "^4.1.2",
+    "request": "^2.83.0"
   }
 }
