--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
-    "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
     "jsonwebtoken": "^8.0.1",
@@ -38,8 +37,6 @@
     "passport-local": "^1.0.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
-    "react-fetch": "^0.0.9",
-    "react-router-dom": "^4.1.2",
-    "request": "^2.83.0"
+    "react-router-dom": "^4.1.2"
   }
 }
