--- a/package.json
+++ b/package.json
@@ -31,11 +31,10 @@
     "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
-    "multer": "^1.3.0",
+    "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
-    "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-router-dom": "^4.1.2"
   }
