--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
     "passport-local": "^1.0.0",
+    "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
+    "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2"
   }
 }
