--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ms_support",
+  "name": "mern",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -9,17 +9,8 @@
     "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
     "build": "cd client && npm run build",
     "deploy": "npm run build && git add . && git commit -m \"Building for production\" && git push heroku master",
-    "seed": "node scripts/seeds",
+    "seed": "node scripts/seedDB",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "engines": {
-    "node": "6.11.2",
-    "npm": "3.10.10",
-    "yarn": "1.1.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/davesrose/MS_support.git"
   },
   "author": "",
   "license": "ISC",
@@ -29,20 +20,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "jquery": "^3.2.1",
-    "jsonwebtoken": "^8.0.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
-    "morgan": "^1.9.0",
-    "passport": "^0.4.0",
-    "passport-jwt": "^3.0.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.0.0",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2"
   }
 }
