--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "express": "^4.15.4",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
+    "passport": "^0.4.0",
+    "react": "^16.0.0",
     "react-router-dom": "^4.1.2"
   }
 }
