--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.1.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "passport": "^0.4.0",
