--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
@@ -7,6 +6,8 @@
 # testing
 /coverage
 
+# production
+/build
 
 # misc
 .DS_Store
@@ -18,7 +19,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-=======
-node_modules
-.DS_Store
->>>>>>> remotes/origin/master
