--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
-    "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "jsonwebtoken": "^8.1.0",
+    "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
-    "passport": "^0.4.0",
-    "passport-jwt": "^3.0.0",
+    "nodemon": "^1.12.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2"
   }
 }
