--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "jquery": "^3.2.1",
+    "jsonwebtoken": "^8.1.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "nodemon": "^1.12.1",
