--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^4.11.7",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
+    "passport-jwt": "^3.0.0",
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
