--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "jsonwebtoken": "^8.1.0",
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
+    "morgan": "^1.9.0",
+    "multer": "^1.3.0",    
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
