--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "yarn": "1.1.0"
+    "yarn": "1.1.0",
+    "node": "6.11.2",
+    "npm": "3.10.10"
+
   },
   "author": "",
   "license": "ISC",
