--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "mern",
   "version": "1.0.0",
-  "description": "",
+  "description": "* Must use ReactJS or Angular in some way (even if minimal)",
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
     "client": "cd client && npm run start",
-    "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
+    "start": "concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
     "build": "cd client && npm run build",
     "deploy": "npm run build && git add . && git commit -m \"Building for production\" && git push heroku master",
     "seed": "node scripts/seedDB",
@@ -18,8 +18,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "webpack": "^3.7.1"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -37,5 +45,13 @@
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.1.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/davesrose/MS_support.git"
+  },
+  "bugs": {
+    "url": "https://github.com/davesrose/MS_support/issues"
+  },
+  "homepage": "https://github.com/davesrose/MS_support#readme"
 }
