--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "aws-sdk": "^2.134.0",
     "axios": "^0.16.2",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.17.2",
@@ -31,7 +32,8 @@
     "moment": "^2.18.1",
     "mongoose": "^4.11.7",
     "morgan": "^1.9.0",
-    "multer": "^1.3.0",    
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
