--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react": "^16.0.0",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.1.2"
+    "react-router-dom": "^4.1.2",
+    "ws": "^3.2.0"
   },
   "repository": {
     "type": "git",
